# fastapi-simple

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
fastapi_simple/: api.py  config.py  main.py
tests/: test_health.py
